--- a/data/cleaning/cleaning_script.ipynb
+++ b/data/cleaning/cleaning_script.ipynb
@@ -7,17 +7,191 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy \n",
-    "import pandas \n",
-    "import json \n",
-    "import uuid \n",
-    "from pathlib import Path \n"
+    "import csv \n",
+    "import json\n",
+    "import uuid  \n",
+    "from  datetime import datetime \n",
+    "from pathlib import Path\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cc60a1b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m INPUT_DIR = \u001b[43mPath\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mdata/stream\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      2\u001b[39m OUTPUT_DIR= Path(\u001b[33m\"\u001b[39m\u001b[33mdata/stream\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m REQUIRED_COLUMNS = [ \n\u001b[32m      4\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mevent_id\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      5\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33msector\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmetadata\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     11\u001b[39m ]\n",
+      "\u001b[31mNameError\u001b[39m: name 'Path' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "INPUT_DIR = Path(\"data/stream\")\n",
+    "OUTPUT_DIR= Path(\"data/stream\")\n",
+    "REQUIRED_COLUMNS = [ \n",
+    "    \"event_id\",\n",
+    "    \"sector\",\n",
+    "    \"entity_id\",\n",
+    "    \"activity_value\",\n",
+    "    \"activity_unit\",\n",
+    "    \"timestamp\",\n",
+    "    \"metadata\"\n",
+    "]\n",
+    "SECTOR_RULES= { \n",
+    "    \"transport\": { \n",
+    "       \"allowed_units\": {\"km\"},\n",
+    "        \"min_value\": 0.0,\n",
+    "        \"max_value\": 5.0   \n",
+    "    }, \n",
+    "    \"electricity\" : {\n",
+    "        \"allowed_units\" : {\"kwh\"},\n",
+    "        \"min_value\" : 0.0,\n",
+    "        \"max_value\" : 50.0\n",
+    "    },\n",
+    "    \"industry\": { \n",
+    "        \"allowed_units\" :  {\"kWh\"},\n",
+    "        \"min_value\": 0.0,\n",
+    "        \"max_value\": 500.0  \n",
+    "    }\n",
+    "}\n",
+    "OUTPUT_DIR.mkdir(parents=True,exist_ok=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6525e21a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid_id(value : str)->bool : \n",
+    "    try : \n",
+    "        uuid.UUID(value)\n",
+    "        return True\n",
+    "    except Exception : \n",
+    "        return False \n",
+    "def is_valid_timestamp(value : str)->bool : \n",
+    "    try : \n",
+    "        datetime.fromisoformat(value.replace(\"Z\",\"+00:00\"))\n",
+    "        return True\n",
+    "    except Exception : \n",
+    "        return False \n",
+    "def is_valid_json(value :  str) -> bool : \n",
+    "    try : \n",
+    "        json.loads(value)\n",
+    "        return True \n",
+    "    except Exception : \n",
+    "        return False \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4dc3d490",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def file_clean(input_path : str)->None : \n",
+    "    output_path = OUTPUT_DIR/ input_path.name\n",
+    "    seen_keys = set()\n",
+    "    with open(input_path, newline=\"\", encoding=\"utf-8\") as fin, \\\n",
+    "         open(output_path, \"w\", newline=\"\", encoding=\"utf-8\") as fout:\n",
+    "\n",
+    "        reader = csv.DictReader(fin)\n",
+    "        writer = csv.DictWriter(fout, fieldnames=REQUIRED_COLUMNS)\n",
+    "        writer.writeheader()\n",
+    "\n",
+    "        for row in reader:\n",
+    "            if not all(col in row for col in REQUIRED_COLUMNS):\n",
+    "                continue\n",
+    "            if not is_valid_id(row[\"event_id\"]):\n",
+    "                continue\n",
+    "            if not is_valid_timestamp(row[\"timestamp\"]):\n",
+    "                continue\n",
+    "            try:\n",
+    "                value = float(row[\"activity_value\"])\n",
+    "            except Exception:\n",
+    "                continue\n",
+    "            if value < 0:\n",
+    "                continue\n",
+    "            if not is_valid_json(row[\"metadata\"]):\n",
+    "                continue\n",
+    "            sector = row[\"sector\"]\n",
+    "            rules = SECTOR_RULES.get(sector)\n",
+    "            if not rules:\n",
+    "                continue\n",
+    "            if row[\"activity_unit\"] not in rules[\"allowed_units\"]:\n",
+    "                continue\n",
+    "\n",
+    "            if not (rules[\"min_value\"] <= value <= rules[\"max_value\"]):\n",
+    "                continue\n",
+    "            dedup_key = (sector, row[\"entity_id\"], row[\"timestamp\"])\n",
+    "            if dedup_key in seen_keys:\n",
+    "                continue\n",
+    "            seen_keys.add(dedup_key)\n",
+    "            writer.writerow({\n",
+    "                \"event_id\": row[\"event_id\"],\n",
+    "                \"sector\": sector,\n",
+    "                \"entity_id\": row[\"entity_id\"],\n",
+    "                \"activity_value\": value,\n",
+    "                \"activity_unit\": row[\"activity_unit\"],\n",
+    "                \"timestamp\": row[\"timestamp\"],\n",
+    "                \"metadata\": row[\"metadata\"]\n",
+    "            })\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f9dc75a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(): \n",
+    "    for csv_file in INPUT_DIR.glob(\"*.csv\") : \n",
+    "        print(f\"Cleaning: { csv_file.name}\")\n",
+    "        file_clean(csv_file)\n",
+    "\n",
+    "    print(\"Cleaning Complete!\")\n",
+    "if __name__ == \"__main__ \" : \n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a4949d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
